<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/ToolbarRL"
        android:background="@color/mi_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mi_toolbar_height">

        <TextView
            android:id="@+id/TituloRl"
            android:text="@string/TituloR1"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />


        <TextView
            android:id="@+id/Tv_registro"
            android:text="@string/Tv_registro"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:textSize="12dp"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_slash"
            android:text="@string/Tv_slash"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:textSize="12dp"
            android:layout_toStartOf="@+id/Tv_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Tv_login"
            android:text="@string/Tv_login"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:textSize="12dp"
            android:layout_toStartOf="@+id/Tv_slash"
            android:layout_marginRight="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#ccc"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/FragmentL1"
        android:layout_below="@+id/ToolbarRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/View1"
        />
    
    <View
        android:id="@+id/View1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"
        android:layout_above="@+id/BottomNV"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottomNV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/mi_menu"
        app:labelVisibilityMode="labeled"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@android:color/white"
        android:backgroundTint="@color/mi_color"
        android:src="@drawable/ic_agregar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        />


</RelativeLayout>