<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/Ic_opciones"
                android:src="@drawable/ic_opciones"
                android:background="@android:color/transparent"
                android:padding="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:id="@+id/Ib_fav"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_no_favorito"
                android:padding="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagenIv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_imagen"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Tv_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/Tv_titulo"/>

        <ImageView
            android:id="@+id/ic_anuncio_verificado"
            android:src="@drawable/ic_anuncio_verificado"
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:id="@+id/Tv_descripcion"
            android:text="@string/Tv_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="2"
            android:textStyle="italic"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/Cl_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ico_fecha_item"/>

            <TextView
                android:id="@+id/Tv_fecha"
                android:text="@string/Tv_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginStart="3dp"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Valoracion-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.1"
                android:clickable="false"
                android:padding="1dp"
                style="?android:attr/ratingBarStyleSmall"/>

            <TextView
                android:id="@+id/Txt_num_val"
                android:text="@string/Txt_num_reseñas"
                android:textStyle="italic"
                android:layout_marginLeft="5dp"
                android:textSize="12dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>