<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".Comentarios">

    <RelativeLayout
        android:id="@+id/ToolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mi_toolbar_height">

        <ImageButton
            android:id="@+id/Ib_regresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_comentarios"
            android:textSize="15sp"
            android:textStyle="bold" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#ccc"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Valoraciones"
        android:layout_below="@id/ToolbarRl"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Txt_valoraciones"
            android:layout_centerVertical="true"
            android:textSize="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0"
            android:padding="1dp"
            android:clickable="true"
            android:layout_marginLeft="3dp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/Valoraciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Txt_agregar"
            android:textStyle="bold|italic"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/Ib_agregar_comentario"
            android:src="@drawable/comentario"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Rv_comentarios"
            android:layout_below="@+id/Ib_agregar_comentario"
            android:layout_marginTop="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_comentario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </RelativeLayout>

</RelativeLayout>